--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -17,9 +17,18 @@ html
     scroll-behavior: smooth
     overflow-x: hidden
 
+@mixin formBlock($height)
+    padding: 15px
+    height: $height
+    background: white
+    border-radius : 8px
+    margin-bottom: 15px
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 
 
 $fbInputArea : #F1F2F5
+
+
 .header
     
     align-content: center
@@ -209,33 +218,13 @@ body
                 width: 361px
                 margin-right: 15px
                 .about
-                    padding: 15px
-                    height: 733px
-                    background: white
-                    border-radius : 8px
-                    margin-bottom: 15px
-                    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+                    @include formBlock(733px)
                 .photos
-                    padding: 15px
-                    height: 288px
-                    background: white
-                    border-radius : 8px
-                    margin-bottom: 15px
-                    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+                    @include formBlock(288px)
                 .videos
-                    padding: 15px
-                    height: 329px
-                    background: white
-                    border-radius : 8px
-                    margin-bottom: 15px
-                    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+                    @include formBlock(329px)
                 .pageTransparency
-                    padding: 15px
-                    height: 195px
-                    background: white
-                    border-radius : 8px
-                    margin-bottom: 15px
-                    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+                    @include formBlock(195px)
             .right
                 width: 502px
                 p
@@ -245,11 +234,7 @@ body
                 .newPost
                     display: flex
                     padding: 15px
-                    height: 113px
-                    background: white
-                    border-radius : 8px
-                    margin-bottom: 32px
-                    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+                    @include formBlock(113px)
                     .photoPost
                         height: 41px
                         width: 41px
@@ -268,11 +253,7 @@ body
                             background: #bebfc2
 
                 .post
-                    padding: 15px
-                    height: 635px
-                    background: white
-                    border-radius : 8px
+                    @include formBlock(635px)
                     margin-bottom: 32px
-                    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 
 
